--- a/.env
+++ b/.env
@@ -31,3 +31,6 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+ALISMS_KEY=LTAIUnYmme3GuqO8
+ALISMS_SECRETKEY=0Odte5TCpFmrpny1p9ewBTXjtYGZbk
