--- a/.env
+++ b/.env
@@ -34,3 +34,8 @@ PUSHER_APP_SECRET=
 
 ALISMS_KEY=LTAIUnYmme3GuqO8
 ALISMS_SECRETKEY=0Odte5TCpFmrpny1p9ewBTXjtYGZbk
+
+DEFAULT=osnb8r0w8.bkt.clouddn.com
+ACCESS_KEY=Lw-kVy_iGO9pcDiKoXAQjHQYSQ4KN8rX7p4BRyHm
+SECRET_KEY=1Gzgh8UJAqAEvfSOWeEqD73E3Sr_Xj8XSnF1kMeP
+BUCKET=weibo
