--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=47.94.193.34
 DB_PORT=3306
 DB_DATABASE=spray 	
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=zhao1998
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
