--- a/.env
+++ b/.env
@@ -32,8 +32,8 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
-ALISMS_KEY=LTAIUnYmme3GuqO8
-ALISMS_SECRETKEY=0Odte5TCpFmrpny1p9ewBTXjtYGZbk
+ALISMS_KEY=23470922
+ALISMS_SECRETKEY=665345491559f6f682a65f3bf2e08644
 
 DEFAULT=osnb8r0w8.bkt.clouddn.com
 ACCESS_KEY=Lw-kVy_iGO9pcDiKoXAQjHQYSQ4KN8rX7p4BRyHm
