--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "iscms/alisms-for-laravel": "^0.0.3",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "predis/predis": "^1.1",
         "zgldh/qiniu-laravel-storage": "^0.6.8"
     },
     "require-dev": {
